[package]
name = "compax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "compax-acceptor"
path = "src/acceptor.rs"

[[bin]]
name = "compax-proposer"
path = "src/proposer.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = "0.9.2"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"]}
